--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: 我的Blog
 			<article>{{ post.description }}</article>
 			<p class="clearfix mt10">
 				<span class="date fl">{{ post.date | date: "%F" }}</span>
-				<a class="more fr" href="{{ site.baseurl }}{{ post.url }}">更多&gt;&gt;</a>
+				<a class="more fr" href="{{ site.baseurl }}{{ post.url }}">更多»</a>
 			</p>
 		</div><!--/content-->
 	{% endfor %}
