细节性修改

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 我的Blog
+title: Beehoo's Blog
 ---
 
 <div class="wp clearfix">
@@ -16,4 +16,8 @@ title: 我的Blog
 		</div><!--/content-->
 	{% endfor %}
 	</div><!--/left_wp-->
+
+	<div class="right_wp fr">
+		
+	</div><!--/right_wp-->
 </div><!--/wp-->
