--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: "壁虎的尾巴"
 		<div class="content">
 			<h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
 			<article>{{ post.content }}</article>
-			<p class="clearfix mt10">
+			<p class="ft_tags clearfix mt10">
 				<span class="date fl">{{ post.date | date: "%F" }}</span>
 				<a class="more fr" href="{{ site.baseurl }}{{ post.url }}">更多»</a>
 			</p>
@@ -18,6 +18,10 @@ title: "壁虎的尾巴"
 	</div><!--/left_wp-->
 
 	<div class="right_wp fr">
-		
+		<div class="bloggerInfo">
+			<div class="blogger_img"><img alt="" src="{{ "/images/user_img.png" | prepend:site.baseurl }}" /></div>
+			<p class="blogger_name tc">Beehoo</p>
+			<p class="mt10 lh180">今日吐槽：卧槽找一个好看合适的网页背景真尼玛烦啊！</p>
+		</div><!--/bloggerInfo-->
 	</div><!--/right_wp-->
 </div><!--/wp-->
