Jquery版本降回1.8，不对IE9以下版本做兼容。优化部分体验

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@ title: "壁虎的尾巴"
 
 	<div class="right_wp fr">
 		<div class="bloggerInfo">
-			<div class="blogger_img"><img alt="" src="{{ "/images/user_img.png" | prepend:site.baseurl }}" /></div>
+			<div class="blogger_img">
+				<img alt="" src="{{ "/images/blogger.png" | prepend:site.baseurl }}" />
+				<img class="none" alt="" src="{{ "/images/blogger_real.png" | prepend:site.baseurl }}" />
+			</div><!--/blogger_img-->
 			<p class="blogger_name tc">Beehoo</p>
 			<p class="mt10 lh180">今日吐槽：设计是一件很费脑子的事情</p>
 		</div><!--/bloggerInfo-->
