--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@ title: "壁虎的尾巴"
 	</div><!--/left_wp-->
 
 	<div class="right_wp fr">
-		<div class="bloggerInfo">
-			<div class="blogger_img">
-				<img alt="" src="{{ "/images/blogger.png" | prepend:site.baseurl }}" />
-				<img class="none" alt="" src="{{ "/images/blogger_real.png" | prepend:site.baseurl }}" />
-			</div><!--/blogger_img-->
-			<p class="blogger_name tc">Beehoo</p>
-			<p class="mt10 lh180">今日吐槽：设计是一件很费脑子的事情</p>
-		</div><!--/bloggerInfo-->
+		<div class="blg_box">
+			<div class="blogger_info clearfix">
+				<div class="blogger_img fl">
+					<img alt="" src="{{ "/images/blogger.png" | prepend:site.baseurl }}" />
+					<img class="none" alt="" src="{{ "/images/blogger_real.png" | prepend:site.baseurl }}" />
+				</div><!--/blogger_img-->
+				<div class="info_box fl ml10">
+					<em class="blogger_name">Beehoo</em>
+					<p class="blogger_intro">欢迎光临壁虎的尾巴</p>
+				</div><!--/info_box-->
+			</div><!--/blogger_info-->
+			<div class="blogger_sc mt10 tc">
+				<a class="f_github" href="https://github.com/beehoo" target="_blank"><i class="iconfont">&#xf01ca</i></a>
+				<a class="f_weibo" href="http://weibo.com/824624059" target="_blank"><i class="iconfont">&#xe619</i></a>
+				<a class="f_twitter" href="http://twitter.com/beehoo143" target="_blank"><i class="iconfont">&#xe634</i></a>
+			</div><!--/blogger_sc-->
+		</div><!--/blg_box-->
 	</div><!--/right_wp-->
 </div><!--/wp-->
