--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ title: "壁虎的尾巴"
 				</div><!--/info_box-->
 			</div><!--/blogger_info-->
 			<div class="blogger_sc mt10 tc">
-				<a class="f_github" href="https://github.com/beehoo" target="_blank"><i class="iconfont">&#xf01ca</i></a>
-				<a class="f_weibo" href="http://weibo.com/824624059" target="_blank"><i class="iconfont">&#xe619</i></a>
-				<a class="f_twitter" href="http://twitter.com/beehoo143" target="_blank"><i class="iconfont">&#xe634</i></a>
+				<a href="https://github.com/beehoo" target="_blank"><i class="iconfont">&#xf01ca;</i></a>
+				<a href="http://weibo.com/824624059" target="_blank"><i class="iconfont">&#xe619;</i></a>
+				<a href="http://twitter.com/beehoo143" target="_blank"><i class="iconfont">&#xe634;</i></a>
 			</div><!--/blogger_sc-->
 		</div><!--/blg_box-->
 	</div><!--/right_wp-->
