--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "壁虎的尾巴"
 				</div><!--/blogger_img-->
 				<div class="info_box fl ml10">
 					<em class="blogger_name">Beehoo</em>
-					<p class="blogger_intro">欢迎光临壁虎的尾巴</p>
+					<p class="blogger_intro">欢迎光临“壁虎的尾巴”</p>
 				</div><!--/info_box-->
 			</div><!--/blogger_info-->
 			<div class="blogger_sc mt10 tc">
