新加了提示页面和彩蛋2号，修正了一些问题

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: "壁虎的尾巴"
 		<div class="blg_box">
 			<div class="blogger_info clearfix">
 				<div class="blogger_img fl">
-					<img alt="" src="{{ "/images/blogger.png" | prepend:site.baseurl }}" />
-					<img class="none" alt="" src="{{ "/images/blogger_real.png" | prepend:site.baseurl }}" />
+					<img alt="" src="{{ '/images/blogger.png' | prepend:site.baseurl }}" />
+					<img class="none" alt="" src="{{ '/images/blogger_real.png' | prepend:site.baseurl }}" />
 				</div><!--/blogger_img-->
 				<div class="info_box fl ml10">
 					<em class="blogger_name">Beehoo</em>
