继续修复火狐下后退input还原的问题

--- a/prompt.html
+++ b/prompt.html
@@ -3,7 +3,7 @@ layout: page
 title: "建设中"
 ---
 
-<input id="hiddenEntrance" type="text" autocomplete="off">
+<input id="hiddenEntrance" type="text" autocomplete="off" disableautocomplete>
 <div class="prompt_box">
 	<h3>网站建设中，敬请期待</h3>
 	您可以：<a id="toHomePage" href="{{ '/' | prepend:site.baseurl }}">返回首页</a>
