--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: "壁虎的尾巴"
 			<article>{{ post.content }}</article>
 			<p class="ft_tags clearfix mt10">
 				<span class="date fl">{{ post.date | date: "%F" }}</span>
-				<a class="more fr" href="{{ site.baseurl }}{{ post.url }}">更多»</a>
+				<a class="more fr" href="{{ site.baseurl }}{{ post.url }}">阅读全文»</a>
 			</p>
 		</div><!--/content-->
 	{% endfor %}
@@ -34,6 +34,10 @@ title: "壁虎的尾巴"
 				<a href="http://weibo.com/824624059" target="_blank"><i class="iconfont">&#xe619;</i></a>
 				<a href="http://twitter.com/beehoo143" target="_blank"><i class="iconfont">&#xe634;</i></a>
 			</div><!--/blogger_sc-->
+		</div><!--/blg_box-->
+
+		<div class="blg_box">
+			<iframe width="100%" height="400" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=400&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=0&isWeibo=1&isFans=0&uid=1794713880&verifier=a4cff2e8&dpc=1"></iframe>
 		</div><!--/blg_box-->
 	</div><!--/right_wp-->
 </div><!--/wp-->
