--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "壁虎的尾巴"
 				</div><!--/blogger_img-->
 				<div class="info_box fl ml10">
 					<em class="blogger_name">Beehoo</em>
-					<p class="blogger_intro">欢迎光临“壁虎的尾巴”</p>
+					<p class="blogger_intro">博客还在继续完善中，欢迎留言发表意见。</p>
 				</div><!--/info_box-->
 			</div><!--/blogger_info-->
 			<div class="blogger_sc mt10 tc">
@@ -34,10 +34,6 @@ title: "壁虎的尾巴"
 				<a href="http://weibo.com/824624059" target="_blank"><i class="iconfont">&#xe619;</i></a>
 				<a href="http://twitter.com/beehoo143" target="_blank"><i class="iconfont">&#xe634;</i></a>
 			</div><!--/blogger_sc-->
-		</div><!--/blg_box-->
-
-		<div class="blg_box">
-			<iframe width="100%" height="400" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=400&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=0&isWeibo=1&isFans=0&uid=1794713880&verifier=a4cff2e8&dpc=1"></iframe>
 		</div><!--/blg_box-->
 	</div><!--/right_wp-->
 </div><!--/wp-->
