--- a/pages/tails_list.html
+++ b/pages/tails_list.html
@@ -4,5 +4,7 @@ title: "尾巴集"
 ---
 
 <div class="wp">
-	<h2 class="f20 tc fb pt100">恭喜你竟然已经发现了这里！不过“尾巴集”板块目前确实仍然在建设中，还请耐心等待，谢谢。</h2>
+	<div class="paper_wp h200">
+		<h2 class="f20 tc pt50">恭喜你竟然已经发现了这里！不过“尾巴集”板块目前确实仍然在建设中，还请耐心等待，谢谢。</h2>
+	</div><!--/paper_wp-->
 </div>
