添加新日志

--- a/_posts/2014-10-21-hello-world.html
+++ b/_posts/2014-10-21-hello-world.html
@@ -9,4 +9,4 @@ author: Beehoo
 <p>嘿～如果你已经闯入了Beehoo正在搭建的博客，那么我得先和您说声对不起了。如你所见Beehoo的博客还没有完成，依旧在努力搭建完善中。不过如果你有兴趣，我可以先大致介绍一下。</p>
 <p>Beehoo的博客将会是一个偏向于技术分享类的博客。主要针对的是前端方面的技术。Beehoo	将会在这里分享一些平日所学的好玩的新技术，新知识，还有工作中一些问题的经验总结，偶尔也会有些生活上的小吐槽等等。</p>
 <p>总之，在Beehoo的博客完成前，大家可以尽可能的设想一些美好的内容，或许今后都会出现在Beehoo的博客中。不过，Beehoo	是一个很懒的人，所以你们想归想，嗯。。。</p>
-<p>如果大家真的有兴趣的话，可以先关注Beehoo的微博：<a class="tag" href="http://weibo.com/824624059" target="_blank">小丑羯的微博</a>。谢谢～</p>
+<p>如果大家真的有兴趣的话，可以先关注Beehoo的微博：<a href="http://weibo.com/824624059" target="_blank">小丑羯的微博</a>。谢谢～</p>
