--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,9 @@ title: "关于Beehoo"
 <div class="wp">
 	<div class="paper_wp clearfix">
 		<div class="about_info fl">
-			<div class="blogger_header"><img alt="" src="{{ '/images/blogger.png' | prepend:site.baseurl }}"></div>
+			<div class="blogger_header">
+				<img alt="" src="{{ '/images/blogger.png' | prepend:site.baseurl }}">
+			</div><!--/blogger_header-->
 			<p class="introduction">Beehoo，1988年生，摩羯座。居住地江苏南京，现就职于<a href="http://www.ningpai.net" target="_blank">南京宁派科技</a>。</p><!--/introduction-->
 			<div class="blogger_sc mt20 tc">
 				<a href="https://github.com/beehoo" target="_blank"><i class="iconfont">&#xf01ca;</i></a>
