--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "壁虎的尾巴"
 				</div><!--/blogger_img-->
 				<div class="info_box fl ml15">
 					<em class="blogger_name">Beehoo</em>
-					<p class="blogger_intro">博客还在继续完善中，欢迎留言发表意见。</p>
+					<p class="blogger_intro">博客还在继续完善中，欢迎留言反馈意见。</p>
 				</div><!--/info_box-->
 			</div><!--/blogger_info-->
 		</div><!--/blg_box-->
